changed header h1 size

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ layout: null
 
 body {
   font-family: 'Lora', 'Times New Roman', serif;
-  font-size: 18px;
+  font-size: 18px; 
   color: #404040;
   position: relative;
   background-color: {{ site.page-col }};
@@ -469,12 +469,14 @@ footer .theme-by {
   text-shadow: 1px 1px 3px #000;
 }
 .intro-header .page-heading h1 {
-  margin-top: 0;
-  font-size: 50px;
+    margin-top: 0;
+    font-size: 30px;
+  /* font-size: 50px; */
 }
 .intro-header .post-heading h1 {
   margin-top: 0;
-  font-size: 35px;
+  /* font-size: 35px; */
+   font-size: 28px;
 }
 .intro-header .page-heading .page-subheading,
 .intro-header .post-heading .post-subheading {
