--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ layout: null
 
 body {
   font-family: 'Lora', 'Times New Roman', serif;
-  font-size: 12px;
+  font-size: 14px;
   color: #404040;
   position: relative;
   background-color: {{ site.page-col }};
@@ -25,6 +25,7 @@ h1,h2,h3,h4,h5,h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 800;
 }
+
 a {
   color: {{ site.link-col }};
 }
@@ -85,8 +86,13 @@ img::-moz-selection {
 }
 
 img {
-  max-width: 100%;
+  /*max-width: 100%;*/
+  max-width: 70%;
+  max-height: 70%;
+  margin: 0 auto;
+  display: block;
 }
+
 
 .disqus-comments {
   margin-top: 30px;
@@ -335,7 +341,7 @@ footer .theme-by {
 }
 
 .post-preview .post-title {
-  font-size: 30px;
+  font-size: 24px;
   margin-top: 0;
 }
 .post-preview .post-subtitle {
@@ -346,7 +352,7 @@ footer .theme-by {
 .post-preview .post-meta,
 .post-heading .post-meta {
   color: #808080;
-  font-size: 18px;
+  font-size: 14px;
   font-style: italic;
   margin: 0 0 10px;
 }
@@ -365,10 +371,10 @@ footer .theme-by {
   height: 192px;
   width: 192px;
   margin-top: -35px;
-  filter: grayscale(90%);
+/*  filter: grayscale(90%);*/
 }
 .post-image:hover {
-  filter: grayscale(0%);
+  filter: grayscale(50%);
 }
 .post-image img {
   border-radius: 100px;
@@ -381,7 +387,7 @@ footer .theme-by {
 
 @media only screen and (min-width: 768px) {
   .post-preview .post-title {
-    font-size: 36px;
+    font-size: 24px;
   }
 }
 
@@ -390,7 +396,7 @@ footer .theme-by {
 .blog-tags {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #999;
-  font-size: 15px;
+  font-size: 12px;
   margin-bottom: 30px;
 }
 
@@ -424,7 +430,8 @@ footer .theme-by {
   }
 
   .post-image {
-    width: 100%;
+    width: 100%; */
+    /*width: 400px;*/
     text-align: center;
     margin-top: 0;
     float: left;
@@ -470,17 +477,18 @@ footer .theme-by {
 }
 .intro-header .page-heading h1 {
     margin-top: 0;
-    font-size: 30px;
+    font-size: 40px;
   /* font-size: 50px; */
 }
+
 .intro-header .post-heading h1 {
   margin-top: 0;
   /* font-size: 35px; */
-   font-size: 28px;
+   font-size: 30px;
 }
 .intro-header .page-heading .page-subheading,
 .intro-header .post-heading .post-subheading {
-  font-size: 27px;
+  font-size: 20px;
   line-height: 1.1;
   display: block;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -525,10 +533,10 @@ footer .theme-by {
     padding: 150px 0;
   }
   .intro-header .page-heading h1 {
-    font-size: 80px;
+    font-size: 40px;
   }
   .intro-header .post-heading h1 {
-    font-size: 50px;
+    font-size: 30px;
   }
   .intro-header.big-img .img-desc {
     font-size: 14px;
@@ -780,7 +788,7 @@ pre {
 }
 
 #full-tags-list .tag-entry a {
-  font-size: 20px;
+  font-size: 16px;
 }
 
 #full-tags-list .tag-entry .entry-date {
