changed font size for block quotes

--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,7 @@ a:focus {
 blockquote {
   color: #808080;
   font-style: italic;
+    font-size: 14px;
 }
 blockquote p:first-child {
   margin-top: 0;
